# json-diff-cli

./: README.md  pyproject.toml  run_fixture_tests.sh  run_formatter_tests.sh  run_pytest_failures.py  run_pytest_runner.py  run_tests.sh  test_differ_quick.py
.github/workflows/: ci.yml  release.yml
examples/: left.json  right.json
src/json_diff_cli/: __init__.py  cli.py  differ.py  exceptions.py  formatter.py  renderer.py
tests/: __init__.py  conftest.py  test_cli.py  test_conftest.py  test_differ.py  test_formatter.py  test_renderer.py
