[tool.poetry]
name = "json-diff-cli"
version = "0.1.0"
description = "A Python CLI tool for comparing JSON files with colorful output"
authors = ["json-diff-cli contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "json_diff_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
rich = "^13.0.0"
deepdiff = "^6.0.0"
json-patch = "^1.33.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
mypy = "^1.5.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
json-diff = "json_diff_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
