[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "json-diff-cli"
version = "0.1.0"
description = "A CLI tool for comparing JSON files with colorful terminal output"
authors = [{name = "Developer"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "deepdiff>=6.0.0",
    "json-patch>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
json-diff = "json_diff_cli.cli:main"

[tool.poetry]
name = "json-diff-cli"
version = "0.1.0"
description = "A CLI tool for comparing JSON files with colorful terminal output"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"
rich = "^13.0.0"
deepdiff = "^6.0.0"
json-patch = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
