[tool.poetry]
name = "json-diff-cli"
version = "0.1.0"
description = "A CLI tool for deep comparison of JSON files with colorful terminal output"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "json_diff_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
deepdiff = "^6.7.1"
json-patch = "^1.33"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/json_diff_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
